<resources>
    <string name="app_name">Bookle</string>
    <string name="lorem_text">loading today\'s Bookle... \n \n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat vulputate risus, at imperdiet orci tincidunt vitae. Morbi auctor ex magna, et consectetur sapien pretium ut. Suspendisse fermentum eget orci nec fermentum. Nullam consectetur, ante nec sagittis finibus, mauris dolor congue libero, in mollis turpis magna vel neque. Quisque posuere ex odio, vitae ornare metus tincidunt vitae. Etiam iaculis scelerisque sem sit amet accumsan. Phasellus at venenatis lorem. Nunc tincidunt metus sit amet felis vestibulum, et sagittis justo porttitor. Cras non ultrices turpis.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel metus massa. Aliquam nulla leo, mollis id rhoncus id, dapibus eget nunc. Vestibulum condimentum, velit et volutpat interdum, arcu nunc eleifend sapien, at fermentum eros nisl a nunc. Suspendisse fringilla molestie condimentum. Mauris vestibulum nibh orci, egestas blandit est pretium eu. Maecenas accumsan, orci a aliquet mollis, tortor leo sodales dolor, ac viverra ex nulla non lacus. In viverra nec ante sed dapibus. Sed fermentum lobortis fringilla. Etiam nec justo id velit dignissim egestas interdum vitae metus. Vivamus suscipit, eros a faucibus interdum, velit sem pulvinar orci, quis sollicitudin felis sapien nec justo. Cras quis finibus urna.

Vestibulum iaculis libero magna, et posuere tellus maximus a. Duis sed tempor leo, ac molestie sapien. Fusce quam tellus, tincidunt dignissim dignissim nec, malesuada nec nunc. Fusce sem magna, pharetra molestie ante et, luctus faucibus arcu. Proin ullamcorper, velit sed rhoncus venenatis, mi odio imperdiet mauris, vel bibendum urna mauris eget lorem. Quisque scelerisque vestibulum arcu. Proin ac ante urna. Ut egestas nulla fermentum sapien porta, eget feugiat nunc placerat.

Mauris diam mi, cursus et elit ut, ornare suscipit risus. Mauris posuere lacus nibh, non hendrerit velit vestibulum id. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec et ornare leo. Nulla facilisi. Phasellus tincidunt nibh sit amet facilisis aliquet. Integer nec eros maximus, malesuada libero id, venenatis arcu. Proin aliquam elit eu mauris vehicula, non malesuada tortor tempor. Mauris eu augue pharetra, ornare nisi fermentum, cursus purus. Etiam ultrices convallis sapien, sit amet finibus quam. Curabitur in viverra sem. Praesent id mollis tortor, volutpat elementum nisi. Vivamus at sapien quis sapien tempor porttitor. Morbi scelerisque luctus nulla, ut luctus ligula vehicula at. In nec mollis diam, et vestibulum felis.

Nullam eget urna semper, eleifend est et, luctus metus. Nam suscipit mollis purus ac malesuada. Maecenas ipsum turpis, bibendum imperdiet vehicula quis, fringilla id nulla. Nulla pellentesque, arcu at mattis consequat, velit lacus laoreet quam, congue pellentesque turpis dui quis orci. Suspendisse gravida orci ultricies lacus lobortis, at mollis nunc mollis. Aenean non mollis lectus. Ut iaculis ornare sem, non iaculis lectus lacinia at. Maecenas fermentum lorem quam. Vivamus erat risus, ornare quis molestie at, elementum ac quam. Vestibulum non augue quis nulla rhoncus tristique. Duis molestie dignissim ligula, id pulvinar justo pretium sed. Curabitur mollis, eros id suscipit feugiat, lacus elit consectetur risus, vitae vehicula elit urna in odio.</string>
    <string name="darkmode">darkmode</string>
    <string name="textsize">textsize</string>
    <string name="message">message</string>
    <string name="reader">Reader</string>
    <string name="reveal">Reveal</string>
    <string name="A">A</string>
    <string name="darkmodetoggle">Dark mode toggle</string>

    <!-- Help page -->
    <string name="help_title">What is Bookle?</string>

    <string name="help_q1">&#128214; Don’t judge a book by its cover...</string>
    <string name="help_a1">Read the first chapter of a different unknown book everyday.</string>

    <string name="help_q2">&#128213; Want to know more?</string>
    <string name="help_a2">Reveal the book title and details at the end of the chapter.</string>

    <string name="help_q3">&#128230; Want to read more?</string>
    <string name="help_a3">There will also be an Amazon link included when you reveal the title.</string>

    <string name="help_q4">&#128218; Want to see books from previous days?</string>
    <string name="help_a4">You can go to the bookshelf for a week-by-week history of previous titles!</string>
    <!-- End help page -->

    <string name="today">Today\'s Bookle was…</string>
    <string name="title0">Pride and Prejudice</string>
    <string name="author0">by Jane Austen</string>
    <string name="timer">Next Bookle in…</string>

    <string-array name="amazon_links">
        <item>https://tinyurl.com/2f7eajtu</item>
        <item>https://tinyurl.com/5ychh5zs</item>
        <item>https://tinyurl.com/3xykzww2</item>
        <item>https://tinyurl.com/5efcmpse</item>
        <item>https://tinyurl.com/bd7pawjs</item>
        <item>https://tinyurl.com/3j6pbutx</item>
        <item>https://tinyurl.com/5fj7appy</item>
        <item>https://tinyurl.com/auwp5jk8</item>
        <item>https://tinyurl.com/46kx3kv8</item>
        <item>https://tinyurl.com/3vsnfy3k</item>
        <item>https://tinyurl.com/2p8neavm</item>
        <item>https://tinyurl.com/yeyrwbsk</item>
        <item>https://tinyurl.com/39887u84</item>
        <item>https://tinyurl.com/3rzpbz5w</item>
    </string-array>

    <string-array name="authors">
        <item>Jane Austen</item>
        <item>Michelle Zauner</item>
        <item>Michelle Obama</item>
        <item>Matt Haig</item>
        <item>Martha Stout</item>
        <item>Naomi Novik</item>
        <item>Jennifer Egan</item>
        <item>Taylor Jenkins Reid</item>
        <item>Lucy Foley</item>
        <item>Suleika Jaouad</item>
        <item>Colleen Hoover</item>
        <item>Emily St. John Mandel</item>
        <item>Brit Bennett</item>
        <item>Heidi W. Durrow</item>
    </string-array>

    <string-array name="titles">
        <item>Pride and Prejudice</item>
        <item>Crying in H Mart</item>
        <item>Becoming</item>
        <item>The Midnight Library</item>
        <item>The Sociopath Next Door</item>
        <item>The Graduate</item>
        <item>The Candy House</item>
        <item>The Seven Husbands of Evelyn Hugo</item>
        <item>The Paris Apartment</item>
        <item>Between Two Kingdoms</item>
        <item>Reminders of Him</item>
        <item>Sea of Tranquility</item>
        <item>The Vanishing Heir</item>
        <item>The Girl Who Fell From The Sky</item>
    </string-array>

    <string name="share_book">Today\'s Bookle opened with the sentence:\n\n\"%1$s\"\nCan you guess the book? Download the app here: https://github.com/yibenson/Bookle</string>
    <string name="share_prior">I read the Bookle on %1$s: %2$s, by the author %3$s.\nDownload the app here: https://github.com/yibenson/Bookle</string>
    <string name="author">by %1$s</string>
    <string name="guess">Guess</string>
    <string name="last_guess_date">Last Guess Date</string>
    <string name="correct_guess">Correct Guess</string>
    <string name="cancel">Cancel</string>

</resources>