<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookToday">


    <View
        android:id="@+id/x"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_baseline_close_24"
        android:onClick="close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todays_bookle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/today"
        android:textAppearance="@style/date"
        app:layout_constraintBottom_toTopOf="@+id/cover_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cover_background"
        android:layout_width="332dp"
        android:layout_height="461dp"
        android:background="@drawable/cover_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <TextView
        android:id="@+id/book0_title"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/title0"
        android:textAppearance="@style/title"
        app:layout_constraintBottom_toTopOf="@+id/book0_cover"
        app:layout_constraintEnd_toEndOf="@+id/cover_background"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/cover_background"
        app:layout_constraintTop_toTopOf="@+id/cover_background" />

    <ImageView
        android:id="@+id/book0_cover"
        android:layout_width="206dp"
        android:layout_height="302dp"
        android:contentDescription="today's bookle cover"
        app:layout_constraintBottom_toBottomOf="@+id/cover_background"
        app:layout_constraintEnd_toEndOf="@+id/cover_background"
        app:layout_constraintStart_toStartOf="@+id/cover_background"
        app:layout_constraintTop_toTopOf="@+id/cover_background"
        app:layout_constraintVertical_bias="0.616" />

    <TextView
        android:id="@+id/book0_author"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:gravity="center_horizontal|top"
        android:text="@string/author0"
        android:textAppearance="@style/author"
        app:layout_constraintBottom_toBottomOf="@+id/cover_background"
        app:layout_constraintEnd_toEndOf="@+id/cover_background"
        app:layout_constraintStart_toStartOf="@+id/cover_background"
        app:layout_constraintTop_toBottomOf="@+id/book0_cover" />

    <View
        android:id="@+id/amazon_button"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/amazon_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover_background" />

    <View
        android:id="@+id/share_button"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@+id/amazon_button"
        app:layout_constraintTop_toBottomOf="@+id/cover_background" />

    <TextView
        android:id="@+id/next_bookle"
        android:layout_width="140dp"
        android:layout_height="66dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/timer"
        android:textAppearance="@style/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#A6B8B8B8"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="TIMER"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toEndOf="@+id/next_bookle" />


</androidx.constraintlayout.widget.ConstraintLayout>